--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                                 </div>
                                 <div class="form-control">
                                     <label for="phone"></label>
-                                    <input type="text" name="phone" id="phone" placeholder="Enter phone number">
+                                    <input type="number" name="phone" id="phone" placeholder="Enter phone number">
                                 </div>
                                 <input type="submit" value="Send" id="submit" class="btn">
                             </form>
